fix: corrected horizontal scroll

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
 .element-container-style {
   background-color: darkgray;
   color: white;
@@ -8,4 +13,17 @@
 
 .app-filler{
   display:table-cell;
+}
+
+.canvas-style{
+  position:fixed; 
+  top:0;
+  left:0; 
+  z-index:-1;
+  width: 100vw;
+  max-width: 100%;
+  height:100vh;
+}
+
+.header-style{
 }
