--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -1,6 +1,8 @@
 .container {
     display:flex;
-    gap: 3.5em;                         
+    gap: 0em;
+    overflow: hidden;
+    whidth: 100%;                      
   }
 
   .header-button{
